--- a/src/styles/Message.module.css
+++ b/src/styles/Message.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   padding: 0 10px 20px 10px;
 }
+
 .messageItem{
   background-color: #ECA9D7;
     display: flex;
@@ -10,21 +11,25 @@
     margin-right: 10px;
     float: right;
     border-radius: 8px;
-    padding: 10px;
+    padding: 5px;
+    margin: 5px;
     max-width: 80%;
     word-break: break-word;
 }
+
 .timestamp{
   font-size: 10px;
   padding: 4px 8px;
   color: #999;
   align-self: flex-end;
 }
+
 .message{
     background-color: #ECA9D7;
     padding: 4px 8px;
     color: #000;
 }
+
 .name{
     display: none;
 }
